<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:layout_marginBottom="10dp"
    android:layout_marginHorizontal="10dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="15dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/carImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_user"
            android:contentDescription="TODO" />
    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/carName"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairo_black"
        android:textSize="14sp"
        android:textColor="@color/green"
        android:layout_marginEnd="15dp"
        android:text="@string/carName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/carUpdateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateTime"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/cairo_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carName" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/carUpdateTime">

        <TextView
            android:id="@+id/carComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/_10"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_baseline_insert_comment_24"
            android:contentDescription="TODO" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/carHolderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/holderName"
            android:fontFamily="@font/cairo_black"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_user"
            android:contentDescription="TODO" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView">

        <TextView
            android:id="@+id/carLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/cairo_black"
            android:text="@string/location"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_location"
            android:contentDescription="TODO" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>